--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,8 +1,8 @@
 ########################################################################################################################
-### Lệnh và quyền
+### lệnh và quyền
 ########################################################################################################################
 # +------------------+---------------------------------------------------------+-----------------------------+
-# |      Lệnh        |                      Mô tả                              |       Quyền                 |
+# |      lệnh        |                      Mô tả                              |       Quyền                 |
 # +------------------+---------------------------------------------------------+-----------------------------+
 # | /rlc             | Hiển thị trợ giúp                                       | randomlootchest.general     |
 # | /rlc additem     | Mở GUI thêm vật phẩm                                    | randomlootchest.additem     |
@@ -23,7 +23,7 @@
 World: "world"
 
 ########################################################################################################################
-### Rương vị trí ngẫu nhiên
+### rương vị trí ngẫu nhiên
 ########################################################################################################################
 # Khu vực rương xuất hiện
 LargestDinctance_X: 10
@@ -41,12 +41,12 @@ KillChestAfterTime: 60
 # Thông báo khi không được phép phá rương
 NotAbleToBreakAchest: "&cBạn không thể phá rương loot!"
 # Để trống để tắt thông báo
-MessageOnSpawn: "&6&l--------------------------------------\n&cRương đã xuất hiện tại &ax: &6{X} &ay: &6{Y} &az: &6{Z}.\n&6&l--------------------------------------"
+MessageOnSpawn: "&6&l--------------------------------------\n&crương đã xuất hiện tại &ax: &6{X} &ay: &6{Y} &az: &6{Z}.\n&6&l--------------------------------------"
 # Để trống để tắt thông báo
 MessageOnLoot: "&6&l--------------------------------------\n&4{Player} &cđã loot rương tại &ax: &6{X} &ay: &6{Y} &az: &6{Z}.\n&6&l--------------------------------------"
 # Để trống để tắt thông báo
-MessageOnKill: "&6&l--------------------------------------\n&4Rương tại &ax: &6{X} &ay: &6{Y} &az: &6{Z} &4đã biến mất!\n&6&l--------------------------------------"
-# Lệnh thực thi khi người chơi mở rương
+MessageOnKill: "&6&l--------------------------------------\n&4rương tại &ax: &6{X} &ay: &6{Y} &az: &6{Z} &4đã biến mất!\n&6&l--------------------------------------"
+# lệnh thực thi khi người chơi mở rương
 CommandsToExecuteOnLoot:
   - eco give {player} 100
 # Hiệu ứng rương khi hoạt động
@@ -84,7 +84,7 @@ UnderBlockCondition: "!_TRANSPARENT_,!WATER,!STATIONARY_WATER,!LAVA,!STATIONARY_
 SideBlockCondition: "!CACTUS"
 
 ########################################################################################################################
-### Rương vị trí cố định
+### rương vị trí cố định
 ########################################################################################################################
 # Khoảng thời gian cập nhật inventory (ngẫu nhiên giữa Min/Max, giây)
 FixedChestUpdateTimeMin: 10
