--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>RandomLootChest</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>3.3.0</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
